<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsPage" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold" />
    <!--
         <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="SETTINGS"
        
        android:textColor="#FFFFFF" />
    -->

    <TextView
        android:id="@+id/notification_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="15dp"
                android:background="#1d1f25"
        android:text="@string/notifi"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textAlignment="inherit"
        android:textColor="#0099FF" />
    <!-- 17549f -->

    <RelativeLayout
        android:id="@+id/notification_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_setting"
         >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/notification_setting"
           
            android:layout_marginLeft="19dp"
            android:layout_marginTop="6dp"
            android:text="@string/messages"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="3dp"
            android:text="@string/activate"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="127dp"
        android:background="#1d1f25"
        android:text="@string/setting"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textAlignment="inherit"
        android:textColor="#0099FF" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/settings" />

</RelativeLayout>